# TTS

./: .gitignore  README.md  app.py  locales.json  pyproject.toml  tts_util.py  voices.json
