[project]
name = "tts"
version = "0.1.0"
description = "Text-To-Speech using Microsoft edge_tts"
authors = [
    {name = "AndersonGrisalesV",email = "grisalesvargasanderson@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (==1.45.1)",
    "edge-tts (==7.0.2)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
